runtime/src/bridge/generated_bridge.h

// Blittable boundary structs. The static_asserts pin the layout the
// managed side assumes; if one fires, the api-def and the C# struct
// have diverged and NOTHING will work until they agree again.

typedef struct P2Vec3 {
    float x;
    float y;
    float z;
} P2Vec3;
typedef struct P2Quat {
    float x;
    float y;
    float z;
    float w;
} P2Quat;
typedef struct P2RaycastHit {
    float pointX;
    float pointY;
    float pointZ;
    float normalX;
    float normalY;
    float normalZ;
    float distance;
    int32_t collider;
    int32_t triangle;
    int32_t layer;
} P2RaycastHit;
typedef struct P2Contact {
    float pointX;
    float pointY;
    float pointZ;
    float normalX;
    float normalY;
    float normalZ;
    int32_t colliderA;
    int32_t colliderB;
    int32_t phase;
    int32_t isTrigger;
    float separation;
} P2Contact;
// UTF-8 message to the EE console at Info level. Diagnostic path; the per-call string copy is accepted (ADR-002 cstr rules).
void ps2ur_debug_log(const char* message);
// Selects the on-screen diagnostics page: 0 off, 1 frame timing, 2 profiler zones, 3 memory regions, 4 VRAM allocations. Select on the pad cycles the same pages; values out of range turn it off.
void ps2ur_debug_overlay_set_page(int32_t page);
// The diagnostics page currently shown (see ps2ur_debug_overlay_set_page).
int32_t ps2ur_debug_overlay_page(void);
// Creates or updates the Light on an entity (M14): kind 0 directional, 1 point, 2 spot; colour premultiplied by intensity; range and cos(half spot angle) for the two local kinds. The light's direction and position come from the entity's transform each frame.
void ps2ur_light_set(int32_t handle, int32_t kind, float r, float g, float b, float range, float spotCos, int32_t enabled);
// RenderSettings.ambientLight (M14): the ambient term the lit programs add, 0..1 per channel.
void ps2ur_scene_set_ambient(float r, float g, float b);
// Creates a root entity (parentHandle 0) or a child. Returns the new handle, or 0 if the entity table is full.
int32_t ps2ur_entity_create(int32_t parentHandle);
// Destroys the entity and its children. The handle's generation is retired: stale handles fail alive() forever after.
void ps2ur_entity_destroy(int32_t handle);
// 1 if the handle refers to a live entity, else 0. This is the native truth behind Unity's destroyed-compares-null semantics.
int32_t ps2ur_entity_alive(int32_t handle);
// GameObject.SetActive: the renderer skips inactive subtrees.
void ps2ur_entity_set_active(int32_t handle, int32_t active);
// activeSelf (not the inherited activeInHierarchy).
int32_t ps2ur_entity_get_active(int32_t handle);
void ps2ur_tf_get_local_position(int32_t handle, P2Vec3* value);
void ps2ur_tf_set_local_position(int32_t handle, float x, float y, float z);
void ps2ur_tf_get_local_rotation(int32_t handle, P2Quat* value);
void ps2ur_tf_set_local_rotation(int32_t handle, float x, float y, float z, float w);
void ps2ur_tf_get_local_scale(int32_t handle, P2Vec3* value);
void ps2ur_tf_set_local_scale(int32_t handle, float x, float y, float z);
// Parent handle, or 0 for a root entity.
int32_t ps2ur_tf_get_parent(int32_t handle);
// Reparents (parentHandle 0 = make root). Local TRS is NOT adjusted here; Transform.SetParent(worldPositionStays) does that math on the managed side where Unity's semantics live.
void ps2ur_tf_set_parent(int32_t handle, int32_t parentHandle);
int32_t ps2ur_tf_child_count(int32_t handle);
// Child handle by index, or 0 if out of range.
int32_t ps2ur_tf_get_child(int32_t handle, int32_t index);
// Advances every animator by dt and writes their root motion back to entity transforms. The managed dispatcher calls this AFTER Update and coroutines and BEFORE LateUpdate, which is the ordering Unity users rely on (M9 task 4).
void ps2ur_anim_update(float dt);
// Jumps the entity's animator to the named baked state with no blend. Returns 1 when the state exists, 0 otherwise. Names are FNV-1a-64 hashes truncated to 32 bits, matching the exporter.
int32_t ps2ur_animator_play(int32_t handle, uint32_t stateHash);
// Starts a crossfade to the named state over a duration in SECONDS. Returns 1 when the state exists.
int32_t ps2ur_animator_crossfade(int32_t handle, uint32_t stateHash, float seconds);
void ps2ur_animator_set_trigger(int32_t handle, uint32_t paramHash);
void ps2ur_animator_set_float(int32_t handle, uint32_t paramHash, float value);
// 1 while a crossfade is running on the entity's animator.
int32_t ps2ur_animator_is_blending(int32_t handle);
// Polls every pad. The managed dispatcher calls this once at the top of the frame, before any script runs.
void ps2ur_input_update(void);
// 1 while the button is held. 'button' is the ps2ur::input::Button ordinal.
int32_t ps2ur_input_button(int32_t port, int32_t button);
int32_t ps2ur_input_button_down(int32_t port, int32_t button);
int32_t ps2ur_input_button_up(int32_t port, int32_t button);
// Stick axis in -1..1 with the deadzone applied; Y is positive up.
float ps2ur_input_axis(int32_t port, int32_t rightStick, int32_t vertical);
// Analog button pressure, 0..255, or 0 when the pad does not report it.
int32_t ps2ur_input_pressure(int32_t port, int32_t button);
int32_t ps2ur_input_connected(int32_t port);
// Small motor is on/off; large motor takes 0..255.
void ps2ur_input_set_rumble(int32_t port, int32_t smallMotor, int32_t largeMotor);
// Starts an async scene load into the host-provided scene buffer (bridge::bind_scene_buffer). additive != 0 appends to the running world instead of replacing it. Returns 1 when the load started. Only one load is in flight at a time; starting a second while one runs is refused.
int32_t ps2ur_scene_load_begin(const char* path, int32_t additive);
// Advances the load by at most byteBudget bytes and returns the LoadState ordinal (0 Idle, 1 Reading, 2 Parsing, 3 Ready, 4 Failed). A budget of 0 means one chunk.
int32_t ps2ur_scene_load_update(int32_t byteBudget);
// 0..1 across read and parse together -- what AsyncOperation.progress returns.
float ps2ur_scene_load_progress(void);
// The LoadState ordinal without advancing the load.
int32_t ps2ur_scene_load_state(void);
// AsyncOperation.allowSceneActivation. 0 parks a completed read at progress 0.9 without swapping the world; setting it back to 1 lets the next update finish. Defaults to 1 on every begin.
void ps2ur_scene_load_set_allow_activation(int32_t allow);
// Advances the physics world by one fixed step against the scene's own transforms. The managed dispatcher calls this from its FixedUpdate loop, before FixedUpdate scripts run.
void ps2ur_phys_step(void);
// Physics.gravity.
void ps2ur_phys_set_gravity(float x, float y, float z);
// Time.fixedDeltaTime as the solver sees it.
float ps2ur_phys_fixed_timestep(void);
void ps2ur_phys_set_fixed_timestep(float dt);
// One cell of Unity's layer collision matrix. Symmetric: setting (a,b) also sets (b,a).
void ps2ur_phys_set_layers_collide(int32_t a, int32_t b, int32_t collide);
// Physics.Raycast. Returns 1 on a hit and fills the caller-owned P2RaycastHit; 0 leaves it untouched.
int32_t ps2ur_phys_raycast(float originX, float originY, float originZ, float dirX, float dirY, float dirZ, float maxDistance, int32_t mask, P2RaycastHit* hit);
// Physics.SphereCast, same contract as the raycast above.
int32_t ps2ur_phys_spherecast(float originX, float originY, float originZ, float radius, float dirX, float dirY, float dirZ, float maxDistance, int32_t mask, P2RaycastHit* hit);
// Physics.OverlapSphere. Runs the query, keeps the result in a native scratch list and returns how many were FOUND -- which may exceed what the list can hold, so a caller can tell it was truncated. Read the entries with ps2ur_phys_overlap_result.
int32_t ps2ur_phys_overlap_sphere(float x, float y, float z, float radius, int32_t mask);
// Collider index from the last overlap query, or -1 when the index is past what the scratch list actually holds.
int32_t ps2ur_phys_overlap_result(int32_t index);
// Contacts produced by the last step. The managed dispatcher reads the whole list in ONE interop call per frame (M11 task 3) rather than one call per event.
int32_t ps2ur_phys_contact_count(void);
// Fills a caller-owned P2Contact from the last step's list. Returns 0 if the index is out of range.
int32_t ps2ur_phys_get_contact(int32_t index, P2Contact* contact);
// Contacts that did not fit this frame. Non-zero means the game is silently missing events, and the runtime says so rather than hiding it.
int32_t ps2ur_phys_contacts_dropped(void);
// Creates a Rigidbody driving the given collider. Returns the body index, or -1 when the table is full.
int32_t ps2ur_phys_add_body(int32_t colliderIndex, float mass, int32_t useGravity, int32_t isKinematic);
void ps2ur_phys_body_set_velocity(int32_t body, float x, float y, float z);
void ps2ur_phys_body_get_velocity(int32_t body, P2Vec3* value);