managed/PS2.UnityShim/Internal/Native.g.cs

// GENERATED by tools/bindgen/bindgen.py from runtime/src/bridge/bridge-api.json.
// Do not edit by hand; run 'python tools/bindgen/bindgen.py gen-all' (ADR-002).
using System.Runtime.InteropServices;

namespace UnityEngine.Internal
{
    internal static class Native
    {
        // UTF-8 message to the EE console at Info level. Diagnostic path; the per-call string copy is accepted (ADR-002 cstr rules).
        [DllImport("__Internal")]
        internal static extern void ps2ur_debug_log(string message);

        // Selects the on-screen diagnostics page: 0 off, 1 frame timing, 2 profiler zones, 3 memory regions, 4 VRAM allocations. Select on the pad cycles the same pages; values out of range turn it off.
        [DllImport("__Internal")]
        internal static extern void ps2ur_debug_overlay_set_page(int page);

        // The diagnostics page currently shown (see ps2ur_debug_overlay_set_page).
        [DllImport("__Internal")]
        internal static extern int ps2ur_debug_overlay_page();

        // Creates or updates the Light on an entity (M14): kind 0 directional, 1 point, 2 spot; colour premultiplied by intensity; range and cos(half spot angle) for the two local kinds. The light's direction and position come from the entity's transform each frame.
        [DllImport("__Internal")]
        internal static extern void ps2ur_light_set(int handle, int kind, float r, float g, float b, float range, float spotCos, int enabled);

        // RenderSettings.ambientLight (M14): the ambient term the lit programs add, 0..1 per channel.
        [DllImport("__Internal")]
        internal static extern void ps2ur_scene_set_ambient(float r, float g, float b);

        // Creates a root entity (parentHandle 0) or a child. Returns the new handle, or 0 if the entity table is full.
        [DllImport("__Internal")]
        internal static extern int ps2ur_entity_create(int parentHandle);

        // Destroys the entity and its children. The handle's generation is retired: stale handles fail alive() forever after.
        [DllImport("__Internal")]
        internal static extern void ps2ur_entity_destroy(int handle);

        // 1 if the handle refers to a live entity, else 0. This is the native truth behind Unity's destroyed-compares-null semantics.
        [DllImport("__Internal")]
        internal static extern int ps2ur_entity_alive(int handle);

        // GameObject.SetActive: the renderer skips inactive subtrees.
        [DllImport("__Internal")]
        internal static extern void ps2ur_entity_set_active(int handle, int active);

        // activeSelf (not the inherited activeInHierarchy).
        [DllImport("__Internal")]
        internal static extern int ps2ur_entity_get_active(int handle);

        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_get_local_position(int handle, out UnityEngine.Vector3 value);

        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_set_local_position(int handle, float x, float y, float z);

        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_get_local_rotation(int handle, out UnityEngine.Quaternion value);

        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_set_local_rotation(int handle, float x, float y, float z, float w);

        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_get_local_scale(int handle, out UnityEngine.Vector3 value);

        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_set_local_scale(int handle, float x, float y, float z);

        // Parent handle, or 0 for a root entity.
        [DllImport("__Internal")]
        internal static extern int ps2ur_tf_get_parent(int handle);

        // Reparents (parentHandle 0 = make root). Local TRS is NOT adjusted here; Transform.SetParent(worldPositionStays) does that math on the managed side where Unity's semantics live.
        [DllImport("__Internal")]
        internal static extern void ps2ur_tf_set_parent(int handle, int parentHandle);

        [DllImport("__Internal")]
        internal static extern int ps2ur_tf_child_count(int handle);

        // Child handle by index, or 0 if out of range.
        [DllImport("__Internal")]
        internal static extern int ps2ur_tf_get_child(int handle, int index);

        // Advances every animator by dt and writes their root motion back to entity transforms. The managed dispatcher calls this AFTER Update and coroutines and BEFORE LateUpdate, which is the ordering Unity users rely on (M9 task 4).
        [DllImport("__Internal")]
        internal static extern void ps2ur_anim_update(float dt);

        // Jumps the entity's animator to the named baked state with no blend. Returns 1 when the state exists, 0 otherwise. Names are FNV-1a-64 hashes truncated to 32 bits, matching the exporter.
        [DllImport("__Internal")]
        internal static extern int ps2ur_animator_play(int handle, uint stateHash);

        // Starts a crossfade to the named state over a duration in SECONDS. Returns 1 when the state exists.
        [DllImport("__Internal")]
        internal static extern int ps2ur_animator_crossfade(int handle, uint stateHash, float seconds);

        [DllImport("__Internal")]
        internal static extern void ps2ur_animator_set_trigger(int handle, uint paramHash);

        [DllImport("__Internal")]
        internal static extern void ps2ur_animator_set_float(int handle, uint paramHash, float value);

        // 1 while a crossfade is running on the entity's animator.
        [DllImport("__Internal")]
        internal static extern int ps2ur_animator_is_blending(int handle);

        // Polls every pad. The managed dispatcher calls this once at the top of the frame, before any script runs.
        [DllImport("__Internal")]
        internal static extern void ps2ur_input_update();

        // 1 while the button is held. 'button' is the ps2ur::input::Button ordinal.
        [DllImport("__Internal")]
        internal static extern int ps2ur_input_button(int port, int button);

        [DllImport("__Internal")]
        internal static extern int ps2ur_input_button_down(int port, int button);

        [DllImport("__Internal")]
        internal static extern int ps2ur_input_button_up(int port, int button);

        // Stick axis in -1..1 with the deadzone applied; Y is positive up.
        [DllImport("__Internal")]
        internal static extern float ps2ur_input_axis(int port, int rightStick, int vertical);

        // Analog button pressure, 0..255, or 0 when the pad does not report it.
        [DllImport("__Internal")]
        internal static extern int ps2ur_input_pressure(int port, int button);

        [DllImport("__Internal")]
        internal static extern int ps2ur_input_connected(int port);

        // Small motor is on/off; large motor takes 0..255.
        [DllImport("__Internal")]
        internal static extern void ps2ur_input_set_rumble(int port, int smallMotor, int largeMotor);

        // Starts an async scene load into the host-provided scene buffer (bridge::bind_scene_buffer). additive != 0 appends to the running world instead of replacing it. Returns 1 when the load started. Only one load is in flight at a time; starting a second while one runs is refused.
        [DllImport("__Internal")]
        internal static extern int ps2ur_scene_load_begin(string path, int additive);

        // Advances the load by at most byteBudget bytes and returns the LoadState ordinal (0 Idle, 1 Reading, 2 Parsing, 3 Ready, 4 Failed). A budget of 0 means one chunk.
        [DllImport("__Internal")]
        internal static extern int ps2ur_scene_load_update(int byteBudget);

        // 0..1 across read and parse together -- what AsyncOperation.progress returns.
        [DllImport("__Internal")]
        internal static extern float ps2ur_scene_load_progress();

        // The LoadState ordinal without advancing the load.
        [DllImport("__Internal")]
        internal static extern int ps2ur_scene_load_state();

        // AsyncOperation.allowSceneActivation. 0 parks a completed read at progress 0.9 without swapping the world; setting it back to 1 lets the next update finish. Defaults to 1 on every begin.
        [DllImport("__Internal")]
        internal static extern void ps2ur_scene_load_set_allow_activation(int allow);

        // Advances the physics world by one fixed step against the scene's own transforms. The managed dispatcher calls this from its FixedUpdate loop, before FixedUpdate scripts run.
        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_step();

        // Physics.gravity.
        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_set_gravity(float x, float y, float z);

        // Time.fixedDeltaTime as the solver sees it.
        [DllImport("__Internal")]
        internal static extern float ps2ur_phys_fixed_timestep();

        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_set_fixed_timestep(float dt);

        // One cell of Unity's layer collision matrix. Symmetric: setting (a,b) also sets (b,a).
        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_set_layers_collide(int a, int b, int collide);

        // Physics.Raycast. Returns 1 on a hit and fills the caller-owned P2RaycastHit; 0 leaves it untouched.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_raycast(float originX, float originY, float originZ, float dirX, float dirY, float dirZ, float maxDistance, int mask, ref UnityEngine.Internal.NativeRaycastHit hit);

        // Physics.SphereCast, same contract as the raycast above.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_spherecast(float originX, float originY, float originZ, float radius, float dirX, float dirY, float dirZ, float maxDistance, int mask, ref UnityEngine.Internal.NativeRaycastHit hit);

        // Physics.OverlapSphere. Runs the query, keeps the result in a native scratch list and returns how many were FOUND -- which may exceed what the list can hold, so a caller can tell it was truncated. Read the entries with ps2ur_phys_overlap_result.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_overlap_sphere(float x, float y, float z, float radius, int mask);

        // Collider index from the last overlap query, or -1 when the index is past what the scratch list actually holds.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_overlap_result(int index);

        // Contacts produced by the last step. The managed dispatcher reads the whole list in ONE interop call per frame (M11 task 3) rather than one call per event.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_contact_count();

        // Fills a caller-owned P2Contact from the last step's list. Returns 0 if the index is out of range.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_get_contact(int index, ref UnityEngine.Internal.NativeContact contact);

        // Contacts that did not fit this frame. Non-zero means the game is silently missing events, and the runtime says so rather than hiding it.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_contacts_dropped();

        // Creates a Rigidbody driving the given collider. Returns the body index, or -1 when the table is full.
        [DllImport("__Internal")]
        internal static extern int ps2ur_phys_add_body(int colliderIndex, float mass, int useGravity, int isKinematic);

        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_body_set_velocity(int body, float x, float y, float z);

        [DllImport("__Internal")]
        internal static extern void ps2ur_phys_body_get_velocity(int body, ref UnityEngine.Vector3 value);
